k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-app
  namespace: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-devops-app
  template:
    metadata:
      labels:
        app: demo-devops-app
    spec:
      containers:
        - name: demo-container
          image: astheniadocker/demo-devops-nodejs:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
