k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-service
  namespace: devops-app
spec:
  selector:
    app: demo-devops-app
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
